--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: r
-sudo: required
+sudo: false
+cache: packages
 
-r_packages:
-  - covr
+r_github_packages:
+  - jimhester/covr
 
 after_success:
   - Rscript -e 'covr::codecov()'
