--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: apipkgen
 Type: Package
 Title: Package Generator for HTTP API Wrapper Packages
 Description: Package Generator for HTTP API Wrapper Packages.
-Version: 0.0.1.9310
+Version: 0.0.3.9210
 Authors@R: c(person("Scott", "Chamberlain", role = c("aut", "cre"),
     email = "myrmecocystus@gmail.com"))
 License: MIT + file LICENSE
@@ -11,5 +11,6 @@ BugReports: https://github.com/ropenscilabs/apipkgen/issues
 Imports:
     yaml
 Suggests:
+    roxygen2 (>= 6.0.1),
     testthat
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
