--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,17 @@ Package: apipkgen
 Type: Package
 Title: Package Generator for HTTP API Wrapper Packages
 Description: Package Generator for HTTP API Wrapper Packages.
-Version: 0.0.3.9210
+Version: 0.0.4.9311
 Authors@R: c(person("Scott", "Chamberlain", role = c("aut", "cre"),
-    email = "myrmecocystus@gmail.com"))
+    email = "sckott@protonmail.com"))
 License: MIT + file LICENSE
 URL: https://github.com/ropenscilabs/apipkgen
 BugReports: https://github.com/ropenscilabs/apipkgen/issues
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
 Imports:
     yaml
 Suggests:
-    roxygen2 (>= 6.0.1),
+    roxygen2 (>= 6.1.1),
     testthat
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
