--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,10 @@ Title: Package Generator for HTTP API Wrapper Packages
 Description: Package Generator for HTTP API Wrapper Packages.
 Version: 0.0.6.9100
 Authors@R: c(person("Scott", "Chamberlain", role = c("aut", "cre"),
-    email = "sckott@protonmail.com"))
+    email = "myrmecocystus@gmail.com"))
 License: MIT + file LICENSE
-URL: https://github.com/ropenscilabs/apipkgen
-BugReports: https://github.com/ropenscilabs/apipkgen/issues
+URL: https://github.com/ropensci/apipkgen
+BugReports: https://github.com/ropensci/apipkgen/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 Imports:
