--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,11 @@ Version: 0.0.6.9100
 Authors@R: c(person("Scott", "Chamberlain", role = c("aut", "cre"),
     email = "myrmecocystus@gmail.com"))
 License: MIT + file LICENSE
-URL: https://github.com/ropensci/apipkgen
-BugReports: https://github.com/ropensci/apipkgen/issues
+URL: https://github.com/sckott/apipkgen
+BugReports: https://github.com/sckott/apipkgen/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 Imports:
     yaml,
     glue
-Suggests:
-    roxygen2 (>= 6.1.1)
-RoxygenNote: 6.1.1
+RoxygenNote: 7.3.2
