--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Version: 0.0.6.9100
 Authors@R: c(person("Scott", "Chamberlain", role = c("aut", "cre"),
     email = "myrmecocystus@gmail.com"))
 License: MIT + file LICENSE
-URL: https://github.com/sckott/apipkgen
+URL: https://github.com/sckott/apipkgen, http://sckott.github.io/apipkgen/
 BugReports: https://github.com/sckott/apipkgen/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
