replace most of create_pkg with usethis fxns #21

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 Imports:
     yaml,
-    glue
+    glue,
+    usethis,
+    withr
 RoxygenNote: 7.3.2
