--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,9 @@ export(write_constants)
 export(write_fxns)
 export(write_helpers)
 import(yaml)
+importFrom(usethis,create_package)
+importFrom(usethis,use_import_from)
+importFrom(usethis,use_mit_license)
+importFrom(usethis,use_package)
+importFrom(usethis,use_package_doc)
+importFrom(withr,with_dir)
